AppWeb/backend/system_errors.log

================================================================================
ERROR: 2026-01-28 19:22:12
Type: SyntaxError
Message: invalid syntax (auth.py, line 255)
Traceback:
Traceback (most recent call last):
  File "C:\Users\PC 2\Videos\finalziadosisi\Astroweb\AppWeb\backend\run.py", line 186, in <module>
    app, login_manager = create_app()
                         ~~~~~~~~~~^^
  File "C:\Users\PC 2\Videos\finalziadosisi\Astroweb\AppWeb\backend\app\__init__.py", line 109, in create_app
    from .routes.auth import auth_bp
  File "C:\Users\PC 2\Videos\finalziadosisi\Astroweb\AppWeb\backend\app\routes\auth.py", line 255
    <<<<<<< HEAD
    ^^
SyntaxError: invalid syntax
================================================================================

================================================================================
ERROR: 2026-01-28 19:24:13
Type: SyntaxError
Message: expected 'except' or 'finally' block (clients.py, line 144)
Traceback:
Traceback (most recent call last):
  File "C:\Users\PC 2\Videos\finalziadosisi\Astroweb\AppWeb\backend\run.py", line 186, in <module>
    app, login_manager = create_app()
                         ~~~~~~~~~~^^
  File "C:\Users\PC 2\Videos\finalziadosisi\Astroweb\AppWeb\backend\app\__init__.py", line 110, in create_app
    from .routes.clients import clients_bp
  File "C:\Users\PC 2\Videos\finalziadosisi\Astroweb\AppWeb\backend\app\routes\clients.py", line 144
    <<<<<<< HEAD
SyntaxError: expected 'except' or 'finally' block
================================================================================
